<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F51B5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="355dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="33dp"
        android:background="#D6DBDF"
        android:text="@string/titulo"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="405dp"
        android:layout_height="328dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitulo">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="154dp"
            tools:srcCompat="@drawable/empleados" />

        <EditText
            android:id="@+id/txtNumEmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numEmp"
            android:inputType="number"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="text"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/txtApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/apellidos"
            android:inputType="text"
            android:textColorHint="#FFFFFF" />

        <EditText
            android:id="@+id/txtSueldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/sueldo"
            android:inputType="numberDecimal"
            android:textColorHint="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="415dp"
        android:layout_height="88dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="177dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="registrarEmpleado"
            android:textSize="10sp"
            app:icon="@android:drawable/ic_input_add"
            app:iconSize="34dp" />

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="Buscar"
            android:textSize="10sp"
            app:icon="@android:drawable/ic_menu_search"
            app:iconSize="34dp" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="actualizarEmpleado"
            android:textSize="10sp"
            app:icon="@android:drawable/ic_menu_upload"
            app:iconSize="34dp" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="eliminarEmpleado"
            android:textSize="10sp"
            app:icon="@android:drawable/ic_delete"
            app:iconSize="34dp" />

        <Button
            android:id="@+id/btnLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#03A9F4"
            android:onClick="listarRegistros"
            android:textSize="10sp"
            app:icon="@android:drawable/ic_menu_agenda"
            app:iconSize="34dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>